--- a/css/additional.css
+++ b/css/additional.css
@@ -1,7 +1,72 @@
 body {
     height: 100vh;
     width: 100vw;
+    cursor: crosshair
 }
+
+#loading {
+    display: flex;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+/* ANIMATE LIQUID FILL */
+.liquid {
+    transform: translateX(100%);
+    transform: translateY(100%);
+    opacity: 0.8;
+    animation: fill 3.2s linear infinite;
+    animation-fill-mode: forwards;
+ }
+
+ .load-container{
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+ }
+ 
+ @keyframes fill {
+    0%{
+       opacity: 0.5;
+       transform: translateY(100%);
+    }
+    60%{
+        transform: translateY(0);
+        opacity: 1;
+     }
+    100%{
+       transform: translateY(0);
+       opacity: 1;
+    }
+ }
+ 
+ /* ANIMATE STEAM */
+ .steam {
+    stroke: #F7F7F7;
+    stroke-width: 1.5px;
+    stroke-dasharray: 200;
+    stroke-dashoffset: 200;
+    opacity: 0.2;
+    animation: steamAnimate 2.5s linear infinite;
+    animation-delay: 1.3s;
+    animation-fill-mode: forwards;
+ }
+ 
+ @keyframes steamAnimate{
+     10%{
+         stroke-dashoffset: 200;
+     }
+       
+     70%{
+         stroke-dashoffset: 0;
+     }
+ }
 
 audio {
     z-index: 3 !important;
@@ -217,7 +282,7 @@ a>.instagram:hover {
 
 @media screen and (min-width: 1100px) {
     .sound-ctrl {
-        top: 30px;
-        bottom: auto;
+        left: 30px;
+        right: auto;
     }
 }
