--- a/css/additional.css
+++ b/css/additional.css
@@ -123,9 +123,9 @@ a>.instagram:hover {
     font-weight: bolder;
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 820px) {
     .logo-text {
-        font-size: 6vh;
+        font-size: 4.5vh;
         padding-left: 30px;
     }
 }
@@ -155,12 +155,12 @@ a>.instagram:hover {
     display: none;
     animation: createBox .25s;
     position: absolute;
-    padding-left: 450px;
+    padding-left: 400px;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    bottom: calc(35vh - 85px);
+    bottom: calc(35vh - 67px);
     z-index: 0;
 }
 
@@ -211,8 +211,8 @@ a>.instagram:hover {
     margin-left: auto;
     margin-right: auto;
     bottom: 35vh;
-    width: 280px;
-    height: 77px;
+    width: 260px;
+    height: 67px;
     cursor: pointer;
     display: inline-block;
     box-shadow: 8px 8px 20px rgba(255, 255, 255, 0.5), 8px 8px 20px rgba(255, 255, 255, 0.5) inset;
@@ -225,7 +225,7 @@ a>.instagram:hover {
     -moz-transition: all .1s ease-out;
     -o-transition: all .1s ease-out;
     transition: all .1s ease-out;
-    padding-block: 22px;
+    padding-block: 18px;
 
 }
 
@@ -292,11 +292,11 @@ a>.instagram:hover {
     text-shadow: 3px 3px 2px #7B4436;
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 520px) {
     .sound-ctrl {
         display: block;
         position: relative;
-        padding-top: 15px;
+        padding-top: 1vh;
         padding-left: 30px;
         bottom: auto;
         right: auto;
@@ -304,5 +304,11 @@ a>.instagram:hover {
 
     .sound-ctrl-mobile {
         display: none;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .sound-ctrl {
+        padding-top: 0px;
     }
 }
