--- a/css/additional.css
+++ b/css/additional.css
@@ -1,7 +1,11 @@
 body {
     height: 100vh;
     width: 100vw;
-    cursor: crosshair
+    cursor: crosshair;
+    overflow: hidden;
+    background-image: url('../assets/img/vid-bg-still.png');
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #loading {
@@ -141,14 +145,25 @@ a>.instagram:hover {
     height: 100%;
 }
 
+.video-contain{
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+}
+
 
 #vidBG {
-    position: fixed;
-    right: 0;
+    position: absolute;
+    top: 0;
     bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    transform: translateX(calc((100% - 100vw) / 2));
+    right: 0;
+    left: 0;
+    margin: auto;
+    min-height: 50%;
+    min-width: 50%;
+    overflow: hidden;
 }
 
 .social-container {
