--- a/css/test.css
+++ b/css/test.css
@@ -1,4 +1,8 @@
-#bridge {
+body {
+    margin: 0;
+  }
+  
+  #bridge {
     display: block;
     margin: 0 auto;
     background-image: url('../assets/img/draw-bg-2.jpeg');
@@ -6,5 +10,15 @@
     width: 100%;
     max-width: 750px;
     height: auto;
-    cursor:  crosshair;
-}
+    cursor: crosshair;
+    cursor: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/circular-cursor.png) 53 53, crosshair;
+  }
+  
+  #bridgeContainer {
+    text-align: center;
+    font-family: Avenir, sans-serif;
+  }
+  
+  #bridgeContainer figcaption {
+    margin-top: 2rem;
+  }
