--- a/css/additional.css
+++ b/css/additional.css
@@ -146,7 +146,7 @@ a>.instagram:hover {
     height: 100%;
 }
 
-video {
+#vidBG {
     position: fixed;
     right: 0;
     bottom: 0;
@@ -333,4 +333,70 @@ video {
     .btn-join {
         bottom: 30vh;
     }
+}
+
+
+.video-header-with-type {
+    display: block;
+    width: 100%;
+    height:100%;
+    position: absolute;
+    z-index: -1;
+    overflow: hidden;
+}
+
+.background-video-wrapper {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -2;
+}
+
+.background-video-inset {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    min-height: 100%;
+    min-width: 1350px;
+    transform: translate3d(-50%, -50%, 0);
+
+
+}
+
+.background-video-inset::before {
+    content: '';
+    display: block;
+    z-index: -3;
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%;
+}
+
+/* @media(max-width: 900px) {
+    .background-video-inset {
+        min-width: 1200px;
+
+    }
+}
+
+@media(max-width: 600px) {
+    .background-video-inset {
+        min-width: 800px;
+
+    }
+} */
+
+iframe{
+    position: absolute;
+    top: -60px;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: calc(100% + 120px);
 }
