--- a/css/additional.css
+++ b/css/additional.css
@@ -180,6 +180,13 @@ a>.instagram:hover {
     padding-inline: 30px;
 }
 
+#under-img{
+    position: fixed;
+    /* right: 0;
+    bottom: 0; */
+    transform: translate(calc((100% - 100vw) / 2), calc((100% - 100vh) /2));
+}
+
 @media screen and (max-width: 825px) {
     .social-container-mobile {
         padding-left: 0px;
@@ -361,9 +368,9 @@ a>.instagram:hover {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%;
     min-height: 100%;
-    min-width: 1350px;
+    min-width: calc(2*100vh);
+    width: auto;
     transform: translate3d(-50%, -50%, 0);
 
 
