--- a/css/additional.css
+++ b/css/additional.css
@@ -181,10 +181,11 @@ a>.instagram:hover {
 }
 
 #under-img{
+    width: 100%;
+    height: 100%;
     position: fixed;
-    /* right: 0;
-    bottom: 0; */
-    transform: translate(calc((100% - 100vw) / 2), calc((100% - 100vh) /2));
+    left: 0;
+    top: 0;
 }
 
 @media screen and (max-width: 825px) {
