--- a/css/additional.css
+++ b/css/additional.css
@@ -181,11 +181,11 @@ a>.instagram:hover {
 }
 
 #under-img{
-    width: 100%;
-    height: 100%;
     position: fixed;
-    left: 0;
-    top: 0;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 @media screen and (max-width: 825px) {
