--- a/css/additional.css
+++ b/css/additional.css
@@ -7,6 +7,20 @@ body {
     background-position: center;
 }
 
+.home-bg-vid {
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    min-width: 100%;
+    min-height: 100%;
+    left: 0;
+    top: 0;
+    transform: translate(calc((100vw - 100%) / 2), calc((100vh - 100%)/2));
+
+    z-index: -999;
+    overflow: hidden;
+}
+
 #loading {
     display: flex;
     position: fixed;
@@ -180,7 +194,7 @@ a>.instagram:hover {
     padding-inline: 30px;
 }
 
-#under-img{
+#under-img {
     position: fixed;
     right: 0;
     bottom: 0;
@@ -347,7 +361,7 @@ a>.instagram:hover {
 .video-header-with-type {
     display: block;
     width: 100%;
-    height:100%;
+    height: 100%;
     position: absolute;
     z-index: -1;
     overflow: hidden;
@@ -400,7 +414,7 @@ a>.instagram:hover {
     }
 } */
 
-iframe{
+iframe {
     position: absolute;
     top: -60px;
     left: 0;
