--- a/css/additional.css
+++ b/css/additional.css
@@ -111,8 +111,8 @@ a>.instagram:hover {
     height: 10vh;
     top: 0;
     left: 0;
-    padding-left: 15px;
-    padding-top: 15px;
+    padding-left: 10px;
+    padding-top: 30px;
     text-align: left;
     display: flex;
     align-items: center;
@@ -260,8 +260,7 @@ a>.instagram:hover {
     inset: 0;
     padding: 5px;
     border-radius: 15px;
-    background:
-        linear-gradient(90deg, rgba(0, 255, 163, 1) 3.57%, rgba(3, 225, 255, 1) 47.74%, rgba(220, 31, 255, 1) 97.03%);
+    background: linear-gradient(252.44deg, #C2ADF4 0%, #FDC4E9 11.46%, #80E0FC 48.96%, #ACAFFF 76.04%, #CC94FF 100%);
     -webkit-mask:
         linear-gradient(#fff 0 0) content-box,
         linear-gradient(#fff 0 0);
@@ -294,7 +293,7 @@ a>.instagram:hover {
     color: #fff;
 }
 
-#mute-btn, #mute-btn-mobile {
+#mute-btn, #mute-btn-mobile, #spotlight-btn {
     display: none;
 }
 
@@ -306,18 +305,45 @@ a>.instagram:hover {
 
 }
 
-.sound-ctrl {
+.cross-line {
+    height: 50px;
+    width: 50px;
+    border-radius: 5px;
+    color: #fff !important;
+    position: absolute;
+    bottom: 23px;
+    left: 73px;
+
+}
+
+.cross-line:after {
+    position: absolute;
+    top: 0;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    content: '\d7'; /* use the hex value here... */
+    font-size: 37px; 
+    color: #fff !important;
+    line-height: 100px;
+}
+
+
+.sound-ctrl, .search-ctrl {
     display: none;
+
     text-shadow: 5px 5px 4px #7B4436;
 }
 
-
-.sound-ctrl:hover {
+.sound-ctrl:hover, .search-ctrl:hover {
     text-shadow: 3px 3px 2px #7B4436;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 520px) {
-    .sound-ctrl {
+    .sound-ctrl, .search-ctrl {
+        color: #fff;
+
         display: block;
         position: relative;
         padding-top: 1vh;
@@ -344,7 +370,7 @@ a>.instagram:hover {
 
 
 @media screen and (max-width: 820px) {
-    .sound-ctrl {
+    .sound-ctrl, .search-ctrl {
         padding-top: 0px;
     }
 }
