--- a/css/additional.css
+++ b/css/additional.css
@@ -2,6 +2,7 @@ body {
     width: 100vw;
     cursor: crosshair;
     overflow: auto;
+    overflow-x: hidden;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -54,42 +55,117 @@ body {
     left: 50%;
 }
 
+.product-link {
+    color: #000;
+    text-decoration: none;
+    box-shadow: none;
+}
+
+.product-link:hover {
+    color: #000 !important;
+}
+
+.sub-filler {
+    height: 32px;
+}
 
 
 .product-box {
-    background: rgba(255, 255, 255, 0.9);
-    height: 25vh;
-    display: flex;
-    flex-grow: 1;
+    background: rgba(237, 255, 236, 0.8);
+    height: 32vh;
     margin-block: 2.5vh;
-    border-radius: 5px;
-    font-family: Raleway, sans-serif;
-    box-shadow: 10px 10px;
+    font-weight: bold;
 
+}
+
+.pt-center {
+    padding-top: calc(16vh - 15px)
 }
 
 .product-box:hover {
     cursor: pointer;
-    background: linear-gradient(252.44deg, #C2ADF4 0%, #FDC4E9 11.46%, #80E0FC 48.96%, #ACAFFF 76.04%, #CC94FF 100%);
-    transition: all .2s ease-in-out;
-    box-shadow: 5px 5px;
 
 }
 
+.flip-container {}
 
+.flip-container:hover .flipper {
+    transform: rotateY(180deg);
+}
+
+/* flipping speed here */
+
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+/* making the the other side hidden while flipping */
+
+.front,
+.back {
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* front side is in front of a back side */
+
+.front {
+    z-index: 2;
+}
+
+/* back side */
+
+.back {
+    transform: rotateY(180deg);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    border: 1px solid white;
+}
+
+
+button {
+    border: 1px solid white;
+    text-decoration: none;
+    font-size: 12px;
+    padding: 5px;
+    padding-inline: 10px;
+    border-radius: 21px;
+    margin-inline: 5px;
+    color: white;
+    background: transparent;
+}
+
+button:hover {
+    background: linear-gradient(252.44deg, #C2ADF4 0%, #FDC4E9 11.46%, #80E0FC 48.96%, #ACAFFF 76.04%, #CC94FF 100%);
+
+}
+
+.product-text {
+    font-size: 14px;
+    font-weight: 400;
+    padding-top: 20px;
+    padding-inline: 5px;
+}
 
 .product-grid {
     margin-inline: auto;
     margin-top: 12.5vh;
 }
 
-.product-desc, .product-img-wrap {
+.product-desc {
     width: 50%;
     padding-block: 10px;
 }
 
 .product-img-wrap {
-    height: 80%;
+    padding-block: 10px;
+    height: 60%;
     text-align: right;
 }
 
@@ -114,10 +190,14 @@ body {
     line-height: 1.2;
 }
 
-.product-subtitle {
-    padding-top: 10px;
-    font-size: 14px;
+.product-title.smaller {
+    font-size: 22px;
+}
 
+.product-subtitle {
+    font-size: 12px;
+    font-weight: lighter;
+    margin-block: 20px;
 }
 
 /* .img-1 {
@@ -234,10 +314,15 @@ a>.instagram:hover {
     }
 }
 
+.home-link {
+    text-decoration: none;
+}
+
 
 .cc-logo {
     height: 10vh;
     width: calc(10vh);
+    z-index: 2;
 }
 
 
@@ -247,6 +332,7 @@ a>.instagram:hover {
     padding-left: 15px;
     text-shadow: 2px 2px 3px #C2ADF4, ;
     font-weight: bolder;
+    z-index: 2;
 }
 
 @media screen and (min-width: 820px) {
@@ -402,14 +488,19 @@ a>.instagram:hover {
     color: #fff;
 }
 
-#mute-btn, #mute-btn-mobile, #spotlight-btn {
+.shop-btn {
+    cursor: pointer;
+}
+
+#mute-btn, #mute-btn-mobile, #spotlight-btn, #mute-btn2, #mute-btn-mobile2 {
     display: none;
 }
 
 .sound-ctrl-mobile {
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     right: 30px;
+    z-index: 3;
 }
 
 .grad-shadow-1 {
@@ -508,17 +599,35 @@ a>.instagram:hover {
     }
 
 
+
+
 }
 
 /* 
 @media screen and (max-width: 520px) {
     
 } */
+@media screen and (min-width: 820px) {
+    .shop-btn {
+        position: absolute;
+        top: calc(1vh + 30px);
+        right: 30px;
+        z-index: 2;
+    }
+}
 
 
 @media screen and (max-width: 820px) {
     .sound-ctrl, .search-ctrl {
         padding-top: 0px;
+    }
+
+    .shop-btn {
+        position: absolute;
+        bottom: 30px;
+        left: 30px;
+        z-index: 2;
+
     }
 }
 
@@ -540,10 +649,14 @@ a>.instagram:hover {
         z-index: 0;
     }
 
+
+
     /* .home-bg-vid {
         margin-top: -8vh;
     } */
 }
+
+
 
 
 .video-header-with-type {
