--- a/css/additional.css
+++ b/css/additional.css
@@ -11,9 +11,10 @@ body {
     overflow: auto !important;
 }
 
-.margin-auto{
+.margin-auto {
     margin: auto;
 }
+
 .home-bg-vid {
     position: absolute;
     padding: 0;
@@ -26,7 +27,7 @@ body {
     overflow: hidden;
 }
 
-.mr-30{
+.mr-30 {
     margin-right: 30px;
 }
 
@@ -92,11 +93,9 @@ body {
 
 
 .product-box {
-    background: rgba(237, 255, 236, 0.8);
     height: max(34vh, 330px);
     margin-block: 2.5vh;
     font-weight: bold;
-
 }
 
 .pt-center {
@@ -137,6 +136,8 @@ body {
 /* front side is in front of a back side */
 
 .front {
+    background: rgba(237, 255, 236, 0.9);
+
     z-index: 2;
 }
 
@@ -144,7 +145,7 @@ body {
 
 .back {
     transform: rotateY(180deg);
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     border: 1px solid white;
 }
@@ -624,10 +625,7 @@ a>.instagram:hover {
 
 }
 
-/* 
-@media screen and (max-width: 520px) {
-    
-} */
+
 @media screen and (min-width: 820px) {
     .shop-btn {
         position: absolute;
@@ -655,8 +653,9 @@ a>.instagram:hover {
         bottom: 30px;
         left: 30px;
         z-index: 2;
-    
+
     }
+
     .art-btn {
         position: absolute;
         bottom: 30px;
@@ -666,13 +665,13 @@ a>.instagram:hover {
     }
 }
 
-.design-btn-mobile{
+.design-btn-mobile {
     display: none;
     margin-top: 30px;
-    
+
 }
 
-.card-buttons{
+.card-buttons {
     float: bottom;
 }
 
@@ -709,6 +708,21 @@ a>.instagram:hover {
     } */
 }
 
+.header-text {
+    color: #fff;
+    font-size: 28px;
+    text-align: center;
+    font-weight: bolder;
+    padding-block: 25px;
+    width: 80%;
+}
+
+
+@media screen and (max-width: 520px) {
+    .header-text{
+        width: 100%;
+    }
+}
 
 
 
