--- a/css/additional.css
+++ b/css/additional.css
@@ -31,6 +31,11 @@ body {
     margin-right: 30px;
 }
 
+.mr-105 {
+    margin-right: 105px;
+
+}
+
 .shop-vid {
     position: fixed;
     opacity: 0.8;
@@ -52,6 +57,10 @@ body {
 
 }
 
+.no-wrap {
+    white-space: nowrap;
+}
+
 .art-col {
     padding-block: 12px;
 }
@@ -62,7 +71,7 @@ body {
     z-index: 100;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: #000;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -286,7 +295,6 @@ button:hover {
     stroke-width: 1.5px;
     stroke-dasharray: 200;
     stroke-dashoffset: 200;
-    opacity: 0.2;
     animation: steamAnimate 2.5s linear infinite;
     animation-delay: 1.3s;
     animation-fill-mode: forwards;
@@ -641,6 +649,10 @@ a>.instagram:hover {
         right: 105px;
         z-index: 2;
     }
+
+    .art-btn.shop-page {
+        right: 30px;
+    }
 }
 
 
@@ -696,6 +708,10 @@ a>.instagram:hover {
 
     .design-btn {
         display: none
+    }
+
+    .mr-105{
+        margin-right: 30px;
     }
 
     .design-btn-mobile {
