--- a/css/additional.css
+++ b/css/additional.css
@@ -662,7 +662,7 @@ a>.instagram:hover {
     }
 
     .shop-btn {
-        position: absolute;
+        position: fixed;
         bottom: 30px;
         left: 30px;
         z-index: 2;
@@ -670,11 +670,15 @@ a>.instagram:hover {
     }
 
     .art-btn {
-        position: absolute;
+        position: fixed;
         bottom: 30px;
         left: calc(50vw - 15px);
         z-index: 2;
 
+    }
+
+    .art-btn.shop-page {
+        left: 30px;
     }
 }
 
